# frg

./: .gitignore  Cargo.toml  README  build.rs  code.frog  fibonacci.frg  test.frg  tmp.rs
examples/: fibonacci.frg  test.frg
site/: frg.js  index.html  script.js  styles.css
src/: args.rs  ast.rs  ast_nodes.rs  grammar.rs  lexer.rs  lib.rs  main.rs  parser.rs
src/ast/: ast_nodes.rs  loops.rs  mod.rs  nodes.rs  parse_conditional.rs  parse_declaration.rs  parse_function.rs  parse_list.rs  parse_struct.rs  parse_types.rs  parse_vec.rs
src/ast/builtins/: print.rs
src/ast/expressions/: binary_operation.rs  builtin.rs  dereference.rs  function_call.rs  function_literal.rs  index_access.rs  literal.rs  map_literal.rs  member_access.rs  mod.rs  parenthesized.rs  range.rs  set_literal.rs  unary_operation.rs  vec_literal.rs
src/ast/statements/: if_statement.rs  mod.rs  return_statement.rs  (+3 more)
src/ast_builder/: mod.rs  types.rs
src/interpreter/: assignment_ops.rs  binary_ops.rs  context.rs  declarations.rs  functions.rs  loops.rs  macros.rs  mod.rs  unary_ops.rs
src/rust_runner/: mod.rs
src/rust_transpiler/: mod.rs
tests/: ast_tests.rs  integration_test.rs  interpreter_tests.rs  lexer_tests.rs
tree-sitter-frg/: Makefile  binding.gyp  go.mod  grammar.js  package.json  tree-sitter.json
tree-sitter-frg-old/: tree-sitter.json
tree-sitter-frg-old/src/: grammar.json  parser.c
tree-sitter-frg/queries/: highlights.scm
tree-sitter-frg/src/: grammar.json  node-types.json  parser.c
ts/: CMakeLists.txt  Cargo.toml  Package.swift  grammar.js  pyproject.toml  setup.py
(+45 files in other folders)
