[package]
name = "frg"
description = "Compiled programming language with frogs!"
license = "MIT"
version = "1.0.0"
edition = "2024"

[dependencies]
# rust-sitter = "0.4.5"
tree-sitter = "0.26.3"

[build-dependencies]
cc = "1.2.50"
# rust-sitter-tool = "0.4.5"

# [lib]
# crate-type = ["cdylib", "rlib"]
