[package]
name = "frg"
description = "Compiled programming language with frogs!"
license = "MIT"
version = "1.0.0"
edition = "2024"

[dependencies]
pico-args = "0.5.0"
# rust-sitter = "0.4.5"
tree-sitter = "0.26.3"

[build-dependencies]
cc = "1.2.50"
# rust-sitter-tool = "0.4.5"

# [lib]
# crate-type = ["cdylib", "rlib"]
